[package]
name = "tds"
version = "0.1.2"
authors = ["iiran <percivalstr@163.com>"]
license = "MIT"
description = "A tool to manage to-do items."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.17", features = ["with-chrono-0_4"] }
chrono = "0.4"
colored = "1.9"
toml = "0.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
dirs = "2.0"
reqwest = { version = "0.10", features = ["json", "blocking"] }
unicode-width = "0.1"
